--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
       header {
         height: 150px;
+        background-color: #c74928;
       }
 
       header img {
@@ -69,7 +70,7 @@
       .further-info {
         clear: left;
         padding: 40px 0;
-        background: #c13832;
+        background: #c74928;
         box-shadow: inset 0 3px 2px rgba(0,0,0,0.5),
                     inset 0 -3px 2px rgba(0,0,0,0.5);
       }
@@ -99,14 +100,13 @@
   <body>
     <header>
       <h1>Mozilla</h1>
-      <!-- insert <img> element, link to the small
-          version of the Firefox logo -->
+      <img src="originals/firefox_logo_120.png">
 
     </header>
 
     <main>
       <article>
-        <!-- insert iframe from youtube -->
+        <iframe width="400" height="225" src="https://www.youtube.com/embed/ojcNcvb1olg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <h2>Rocking the free web</h2>
 
@@ -118,21 +118,41 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <picture>
+            <source media="(max-width: 500px)" srcset="/originals/firefox_logo_120.png">
+            <source media="(min-width: 501px)" srcset="/originals/firefox_logo_400.png">
+            <img src="/originals/firefox_logo_400.png" alt="Mozilla Firefox Logo">
+          </picture>
         </a>
+
         <a href="https://www.mozilla.org/">
-          <img>
+          <picture>
+            <source media="(max-width: 500px)" srcset="/originals/mozilla-dinosaur-head_120.png">
+            <source media="(min-width: 501px)" srcset="/originals/mozilla-dinosaur-head_400.png">
+            <img src="/originals/mozilla-dinosaur-head_400.png" alt="Mozilla Dinosaur Head Logo">
+          </picture>
         </a>
+
         <a href="https://addons.mozilla.org/">
-          <img>
+          <picture>
+            <source media="(max-width: 500px)" srcset="/originals/firefox-addons_120.jpg">
+            <source media="(min-width: 501px)" srcset="/originals/firefox-addons_400.jpg">
+            <img src="originals/firefox-addons_400.jpg" alt="Mozilla Addons Logo">
+          </picture>
         </a>
+        
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="originals/mdn.svg">
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
+        <picture>
+          <source media="max-width: 600px)" srcset="/originals/red-panda_600.jpg">
+          <source media="(min-width: 601px)" srcset="/originals/red-panda_1200.jpg">
+          <img src="originals/red-panda_600.jpg" alt="Red Panda">
+        </picture>
         <!-- insert picture element -->
       </div>
 
