updated index file with new image locations

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <body>
     <header>
       <h1>Mozilla</h1>
-      <img src="originals/firefox_logo_120.png">
+      <img src="firefox_logo_120.png">
 
     </header>
 
@@ -119,25 +119,25 @@
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
           <picture>
-            <source media="(max-width: 500px)" srcset="/originals/firefox_logo_120.png">
-            <source media="(min-width: 501px)" srcset="/originals/firefox_logo_400.png">
-            <img src="/originals/firefox_logo_400.png" alt="Mozilla Firefox Logo">
+            <source media="(max-width: 500px)" srcset="firefox_logo_120.png">
+            <source media="(min-width: 501px)" srcset="firefox_logo_400.png">
+            <img src="firefox_logo_400.png" alt="Mozilla Firefox Logo">
           </picture>
         </a>
 
         <a href="https://www.mozilla.org/">
           <picture>
-            <source media="(max-width: 500px)" srcset="/originals/mozilla-dinosaur-head_120.png">
-            <source media="(min-width: 501px)" srcset="/originals/mozilla-dinosaur-head_400.png">
-            <img src="/originals/mozilla-dinosaur-head_400.png" alt="Mozilla Dinosaur Head Logo">
+            <source media="(max-width: 500px)" srcset="mozilla-dinosaur-head_120.png">
+            <source media="(min-width: 501px)" srcset="mozilla-dinosaur-head_400.png">
+            <img src="mozilla-dinosaur-head_400.png" alt="Mozilla Dinosaur Head Logo">
           </picture>
         </a>
 
         <a href="https://addons.mozilla.org/">
           <picture>
-            <source media="(max-width: 500px)" srcset="/originals/firefox-addons_120.jpg">
-            <source media="(min-width: 501px)" srcset="/originals/firefox-addons_400.jpg">
-            <img src="originals/firefox-addons_400.jpg" alt="Mozilla Addons Logo">
+            <source media="(max-width: 500px)" srcset="firefox-addons_120.jpg">
+            <source media="(min-width: 501px)" srcset="firefox-addons_400.jpg">
+            <img src="firefox-addons_400.jpg" alt="Mozilla Addons Logo">
           </picture>
         </a>
         
@@ -149,9 +149,9 @@
 
       <div class="red-panda">
         <picture>
-          <source media="max-width: 600px)" srcset="/originals/red-panda_600.jpg">
-          <source media="(min-width: 601px)" srcset="/originals/red-panda_1200.jpg">
-          <img src="originals/red-panda_600.jpg" alt="Red Panda">
+          <source media="max-width: 600px)" srcset="red-panda_600.jpg">
+          <source media="(min-width: 601px)" srcset="red-panda_1200.jpg">
+          <img src="red-panda_600.jpg" alt="Red Panda">
         </picture>
         <!-- insert picture element -->
       </div>
