--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       html {
         font-family: 'Open Sans', sans-serif;
-        background: url(pattern.png);
+        background: url(originals/pattern.png);
       }
 
       body {
