--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       html {
         font-family: 'Open Sans', sans-serif;
-        background: url(originals/pattern.png);
+        background: url(originals/firefox-logo_pattern.png);
       }
 
       body {
@@ -25,7 +25,7 @@
 
       header {
         height: 150px;
-        background-color: #c74928;
+        background-color: #dd8d28;
       }
 
       header img {
